# perspeak-ai-backend

./: .gitignore  .replit  .vercelignore  README.md  README.zh-CN.md  VERCEL.md  pnpm-lock.yaml  pyproject.toml  replit.md  vercel.json
api/: index.py  requirements.txt
attached_assets/: Pasted--1--1780618632545_1780618632546.txt  Pasted--1-1-AUDIENCE-1-2-SCENARIO-2--1782137149666_1782137149666.txt  Pasted--5-5-6-0-config-defense-knowledge-base-py-prompt--17825_1782558635966.txt  Pasted--5-5-6-0-config-defense-knowledge-base-py-prompt--17825_1782558864078.txt  Pasted--Bug-PPT-40-Mock-Har-1780398832462_1780398832463.txt  Pasted--Bug-What-I-did-good-Areas-for-Improvement--17803967201_1780396720177.txt  Pasted--Class-Presentation-Q-A-Talk-Like-TED--1781057297976_1781057297976.txt  Pasted--Class-Presentation-Q-A-Talk-Like-TED--1781057315729_1781057315730.txt  Pasted--Presentation-Quality-AAC-U-Toastmasters--1780113239446_1780113239446.txt  Pasted--Presentation-Quality-Communication-Quality--1781179302_1781179302893.txt  Pasted--Q-A-QA-Engine-qa-e-1781408325061_1781408325061.txt  Pasted--Q-A-qa-engine-py-report-generator-py--1781607646115_1781607646116.txt  Pasted--Replit-Class-Presentation-Presentation-Quality-UI--178_1784884762550.txt  Pasted--Talk-Like-TED-Scores-Engine-Gemini-Prompt--17810149014_1781014901477.txt  Pasted--Web-Speech-API-Speechace-API-STT--1782389384762_1782389384762.txt  Pasted--form-onSubmit-handleSubmit-SURVEY-QUESTIONS-map-q-div-_1783337159199.txt  Pasted--module-class-presentation-quality-language-zh-CN-cover_1784864444775.txt  (+5 more)
(+218 files in other folders)
